--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,10 @@
 2015-10-20  Stavros Filippidis  <stavros@filippidis.name>
 
+	* Started development of next version (currently named 1.3.3-beta).
+	* Minor changes.
+	
+2015-10-20  Stavros Filippidis  <stavros@filippidis.name>
+
 	* Version 1.3.2 released.
 	* Minor changes.
    	
