--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,6 @@
-2017-01-05  Stavros Filippidis  <stavros@filippidis.name>
+2017-01-07  Stavros Filippidis  <stavros@filippidis.name>
 
-	* Development of next version (currently named 1.3.3-beta).
+	* Version 1.3.3 released.
 	* Changed type of license's message box.
 	* Minor changes.
 	
