--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,7 @@
-2020-01-07  Stavros Filippidis  <sfilippidis@gmail.com>
+2021-01-02  Stavros Filippidis  <sfilippidis@gmail.com>
 
-	* Preparing for next release (temporary named 1.3.4+).
+	* Version 1.3.5 released.
+	* New website.
 
 2018-07-23  Stavros Filippidis  <sfilippidis@gmail.com>
 
