--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2021-01-16  Stavros Filippidis  <sfilippidis@gmail.com>
+
+	* Code refactoring.
+	* Correction: link of the new website.
+
 2021-01-02  Stavros Filippidis  <sfilippidis@gmail.com>
 
 	* Version 1.3.5 released.
