--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2024-11-01  Stavros Filippidis  <sfilippidis@gmail.com>
+
+	* New comments added.
+
 2021-02-04  Stavros Filippidis  <stavros@filippidis.name>
 
 	* New email address and new website.
